# schema-gen

./: .gitignore  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_0001.txt  COMMIT_MESSAGE_0002.txt  COMMIT_MESSAGE_0003.txt  HOWTO-add-sanitize.txt  Makefile  PATCH_NOTES.txt  README-PHASE1.txt  README.md  README_PATCH.md  TESTPLAN_40b_condition_pages.md  TESTPLAN_enhancer.md  TEST_PLAN.txt  pyproject.toml  requirements.txt  schema-batch-20250825-173506.csv  schema-export-20250825-171726.csv  setup_skeleton.sh
app/: db.py  main.py  main.py.patch.txt  main_part1.py  main_part2.py  main_part3.py  main_part4.py  models.py  settings_models.py
app/schemas/: hospital.schema.json  medical_clinic.schema.json  medical_web_page.schema.json  physician.schema.json
app/services/: __init__.py  advice.py  ai.py  compare.py  csv_ingest.py  enhance.py  enrichment.py  extract.py  fetch.py  friendly_errors.py  geocode.py  graph.py  history.py  jsonld_extract.py  normalize.py  page_types.py  progress.py  providers.py  refine.py  sanitize.py  schemas.py  score.py  secondary_validate.py  settings.py  signals.py  validate.py
app/web/routers/: _fallback_admin_extract.py  _fallback_admin_models.py  _fallback_admin_page.py  _fallback_admin_settings.py  _fallback_admin_test.py  _fallback_admin_types.py  _fallback_batch.py  _fallback_compat_redirects.py  _fallback_history.py  batch.py
app/web/templates/: admin.html  admin_settings.html  admin_types.html  base.html  batch.html  batch_preview.html  batch_run.html  history_detail.html  history_list.html  (+3 more)
tests/: conftest.py  test_enrichment_phase1.py
(+1 files in other folders)
